// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormControls /> should add missing buttons if not defined in button order 1`] = `
<ContextWrapper>
  <FormControls
    buttonOrder={Array []}
    canReset={true}
    canSubmit={true}
    cancelLabel="Cancel"
    onCancel={[MockFunction]}
    onReset={[MockFunction]}
    onSubmit={[MockFunction]}
    pristine={true}
    resetLabel="Reset"
    submitLabel="Submit"
  >
    <Component
      xs={12}
    >
      <div
        xs={12}
      >
        <Component>
          <div>
            <Component>
              <div>
                <Component
                  key="form-submit"
                  label="Submit"
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  <button
                    onClick={[MockFunction]}
                    type="button"
                    variant="primary"
                  >
                    Submit
                  </button>
                </Component>
                <Component
                  disabled={true}
                  key="form-reset"
                  label="Reset"
                  onClick={[MockFunction]}
                  type="button"
                >
                  <button
                    disabled={true}
                    onClick={[MockFunction]}
                    type="button"
                  >
                    Reset
                  </button>
                </Component>
                <Component
                  key="form-cancel"
                  label="Cancel"
                  onClick={[MockFunction]}
                  type="button"
                >
                  <button
                    onClick={[MockFunction]}
                    type="button"
                  >
                    Cancel
                  </button>
                </Component>
              </div>
            </Component>
          </div>
        </Component>
      </div>
    </Component>
  </FormControls>
</ContextWrapper>
`;

exports[`<FormControls /> should render all controls and with default labels 1`] = `
<ContextWrapper>
  <FormControls
    buttonOrder={
      Array [
        "submit",
        "reset",
        "cancel",
      ]
    }
    canReset={true}
    canSubmit={false}
    cancelLabel="Cancel"
    disableSubmit={true}
    onCancel={[MockFunction]}
    onReset={[MockFunction]}
    onSubmit={[MockFunction]}
    pristine={true}
    resetLabel="Reset"
    submitLabel="Submit"
  >
    <Component
      xs={12}
    >
      <div
        xs={12}
      >
        <Component>
          <div>
            <Component>
              <div>
                <Component
                  disabled={true}
                  key="form-submit"
                  label="Submit"
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  <button
                    disabled={true}
                    onClick={[MockFunction]}
                    type="button"
                    variant="primary"
                  >
                    Submit
                  </button>
                </Component>
                <Component
                  disabled={true}
                  key="form-reset"
                  label="Reset"
                  onClick={[MockFunction]}
                  type="button"
                >
                  <button
                    disabled={true}
                    onClick={[MockFunction]}
                    type="button"
                  >
                    Reset
                  </button>
                </Component>
                <Component
                  key="form-cancel"
                  label="Cancel"
                  onClick={[MockFunction]}
                  type="button"
                >
                  <button
                    onClick={[MockFunction]}
                    type="button"
                  >
                    Cancel
                  </button>
                </Component>
              </div>
            </Component>
          </div>
        </Component>
      </div>
    </Component>
  </FormControls>
</ContextWrapper>
`;

exports[`<FormControls /> should render buttons in correct order 1`] = `
<ContextWrapper>
  <FormControls
    buttonOrder={
      Array [
        "cancel",
        "submit",
        "reset",
      ]
    }
    canReset={true}
    canSubmit={true}
    cancelLabel="Cancel"
    onCancel={[MockFunction]}
    onReset={[MockFunction]}
    onSubmit={[MockFunction]}
    pristine={true}
    resetLabel="Reset"
    submitLabel="Submit"
  >
    <Component
      xs={12}
    >
      <div
        xs={12}
      >
        <Component>
          <div>
            <Component>
              <div>
                <Component
                  key="form-cancel"
                  label="Cancel"
                  onClick={[MockFunction]}
                  type="button"
                >
                  <button
                    onClick={[MockFunction]}
                    type="button"
                  >
                    Cancel
                  </button>
                </Component>
                <Component
                  key="form-submit"
                  label="Submit"
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  <button
                    onClick={[MockFunction]}
                    type="button"
                    variant="primary"
                  >
                    Submit
                  </button>
                </Component>
                <Component
                  disabled={true}
                  key="form-reset"
                  label="Reset"
                  onClick={[MockFunction]}
                  type="button"
                >
                  <button
                    disabled={true}
                    onClick={[MockFunction]}
                    type="button"
                  >
                    Reset
                  </button>
                </Component>
              </div>
            </Component>
          </div>
        </Component>
      </div>
    </Component>
  </FormControls>
</ContextWrapper>
`;

exports[`<FormControls /> should render only submit button 1`] = `
<ContextWrapper>
  <FormControls
    buttonOrder={
      Array [
        "submit",
        "reset",
        "cancel",
      ]
    }
    canReset={false}
    canSubmit={false}
    cancelLabel="Cancel"
    onReset={[MockFunction]}
    onSubmit={[MockFunction]}
    pristine={true}
    resetLabel="Reset"
    submitLabel="Submit"
  >
    <Component
      xs={12}
    >
      <div
        xs={12}
      >
        <Component>
          <div>
            <Component>
              <div>
                <Component
                  key="form-submit"
                  label="Submit"
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  <button
                    onClick={[MockFunction]}
                    type="button"
                    variant="primary"
                  >
                    Submit
                  </button>
                </Component>
              </div>
            </Component>
          </div>
        </Component>
      </div>
    </Component>
  </FormControls>
</ContextWrapper>
`;
